--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.460.0",
     "next": "^15.5.9",
     "postcss": "^8.5.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "^22",
