--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^19.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
