--- a/package.json
+++ b/package.json
@@ -6,18 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "db:seed": "tsx prisma/seed.ts",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "bcryptjs": "^3.0.3",
-    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
-    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.460.0",
     "next": "^15.5.9",
     "postcss": "^8.5.6",
@@ -25,14 +18,10 @@
     "react-dom": "^19.0.0-rc.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "prisma": "^7.2.0",
     "tailwindcss": "^4.1.18",
-    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
